Experimental performance improvements